--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,9 +7,15 @@ updates:
     directory: '/'
     schedule:
       interval: 'monthly'
+    groups:
+      github-actions:
+        patterns: '*'
 
   # Keep dependencies for Composer up-to-date
   - package-ecosystem: 'composer'
     directory: '/'
     schedule:
       interval: 'monthly'
+    groups:
+      composer:
+        patterns: '*'
