--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
   },
   "require-dev": {
     "php": "^8.1",
-    "phpunit/phpunit": "^10.5",
-    "slevomat/coding-standard": "^8.14.1",
-    "squizlabs/php_codesniffer": "^3.11.1"
+    "phpunit/phpunit": "^10.5 | ^11.5",
+    "slevomat/coding-standard": "^8.19.1",
+    "squizlabs/php_codesniffer": "^3.13.2"
   },
   "scripts": {
     "post-install-cmd": [
