--- a/.github/workflows/exercise-tests-phpunit-11.yml
+++ b/.github/workflows/exercise-tests-phpunit-11.yml
@@ -14,10 +14,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # php-version: [8.2, 8.3, 8.4]
-        # os: [ubuntu-24.04, windows-2022, macOS-14]
-        php-version: [8.4]
-        os: [ubuntu-24.04]
+        php-version: [8.2, 8.3, 8.4]
+        os: [ubuntu-24.04, windows-2022, macOS-14]
 
     steps:
       - name: Set git line endings
@@ -40,7 +38,6 @@ jobs:
           chmod +x bin/phpunit-11.phar
 
       - name: Test exercises
-        continue-on-error: true
         shell: bash
         env:
           PHPUNIT_BIN: 'bin/phpunit-11.phar'
