sync using configlet

--- a/exercises/practice/linked-list/.meta/config.json
+++ b/exercises/practice/linked-list/.meta/config.json
@@ -13,5 +13,6 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Implement a doubly linked list"
+  "blurb": "Implement a doubly linked list.",
+  "source": "Classic computer science topic"
 }
