--- a/exercises/practice/linked-list/.meta/config.json
+++ b/exercises/practice/linked-list/.meta/config.json
@@ -2,6 +2,9 @@
   "authors": [
     "MichaelBunker"
   ],
+  "contributors":[
+    "A-O-Emmanuel"
+  ],
   "files": {
     "solution": [
       "LinkedList.php"
