--- a/exercises/practice/high-scores/.meta/config.json
+++ b/exercises/practice/high-scores/.meta/config.json
@@ -16,5 +16,6 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Manage a player's High Score list"
+  "blurb": "Manage a player's High Score list.",
+  "source": "Tribute to the eighties' arcade game Frogger"
 }
