--- a/exercises/practice/flatten-array/.meta/config.json
+++ b/exercises/practice/flatten-array/.meta/config.json
@@ -6,7 +6,8 @@
     "arueckauer",
     "kunicmarko20",
     "kytrinyx",
-    "neenjaw"
+    "neenjaw",
+    "A-O-Emmanuel"
   ],
   "files": {
     "solution": [
