--- a/exercises/practice/flatten-array/.meta/config.json
+++ b/exercises/practice/flatten-array/.meta/config.json
@@ -6,7 +6,8 @@
     "arueckauer",
     "kunicmarko20",
     "kytrinyx",
-    "neenjaw"
+    "neenjaw",
+    "A-O-Emmanuel"
   ],
   "files": {
     "solution": [
@@ -19,7 +20,7 @@
       ".meta/example.php"
     ]
   },
-  "blurb": "Take a nested list and return a single list with all values except nil/null",
+  "blurb": "Take a nested list and return a single list with all values except nil/null.",
   "source": "Interview Question",
   "source_url": "https://reference.wolfram.com/language/ref/Flatten.html"
 }
