add name to contributors

--- a/exercises/practice/grains/.meta/config.json
+++ b/exercises/practice/grains/.meta/config.json
@@ -6,7 +6,8 @@
     "arueckauer",
     "G-Rath",
     "kytrinyx",
-    "petemcfarlane"
+    "petemcfarlane",
+    "A-O-Emmanuel"
   ],
   "files": {
     "solution": [
