Deprecate ordinal-number

--- a/config.json
+++ b/config.json
@@ -1128,6 +1128,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
+        "status": "deprecated",
         "topics": [
           "strings",
           "conditionals"
