--- a/exercises/practice/line-up/.meta/config.json
+++ b/exercises/practice/line-up/.meta/config.json
@@ -1,5 +1,9 @@
 {
-  "authors": [],
+  "authors": [
+    "codedge",
+    "neenjaw",
+    "mk-mxp"
+  ],
   "files": {
     "solution": [
       "LineUp.php"
