--- a/exercises/practice/ocr-numbers/.meta/config.json
+++ b/exercises/practice/ocr-numbers/.meta/config.json
@@ -6,7 +6,8 @@
     "arueckauer",
     "G-Rath",
     "kytrinyx",
-    "petemcfarlane"
+    "petemcfarlane",
+    "mk-mxp"
   ],
   "files": {
     "solution": [
