--- a/exercises/practice/ocr-numbers/.meta/config.json
+++ b/exercises/practice/ocr-numbers/.meta/config.json
@@ -6,7 +6,8 @@
     "arueckauer",
     "G-Rath",
     "kytrinyx",
-    "petemcfarlane"
+    "petemcfarlane",
+    "mk-mxp"
   ],
   "files": {
     "solution": [
@@ -21,5 +22,5 @@
   },
   "blurb": "Given a 3 x 4 grid of pipes, underscores, and spaces, determine which number is represented, or whether it is garbled.",
   "source": "Inspired by the Bank OCR kata",
-  "source_url": "https://codingdojo.org/cgi-bin/wiki.pl?KataBankOCR"
+  "source_url": "https://codingdojo.org/kata/BankOCR/"
 }
